# Device-Condition-Monitor

./: CMakeLists.txt  Demo.cpp  README.md  devices.csv  grid_monitor_dashboard.pbix
tools/: write_test.cpp
